<resources>
    <string name="app_name">LactateStat</string>
    <string name="lactatestat_logo_description">LactateStat Logo</string>
    <string name="connect_button_text">Connect to LactateStat</string>
    <string name="history_button_text">LactateStat History</string>
    <string name="status_not_connected">LactateStat not connected</string>
    <string name="select_lactatestat">Select Device</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="cancel_search">Cancel search</string>
    <string name="new_session">New Session</string>
    <string name="device_unreachable">Device unreachable</string>
    <string name="ble_connection_status_icon">BLE connection status icon</string>
    <string name="no_data">No Data</string>
    <string name="pause_saving">Pause Saving</string>
    <string name="continue_saving">Continue Saving</string>
    <string name="time_s">Time (s)</string>
    <string name="current_na">Current (nA)</string>
    <string name="save_data">Save Data</string>
    <string name="stop_save">Stop Save</string>
    <string name="select_graph_unit">Select Graph Unit</string>
    <string name="current">Current</string>
    <string name="lactate">Lactate</string>
    <string name="ready_to_start">Ready to start new session</string>
    <string name="bias_voltage_mv">Bias Voltage:</string>
    <string name="default_settings_loaded">Default settings loaded</string>
    <string name="start_session">Start session</string>
    <string name="bias_polarity">Bias polarity:</string>
    <string name="polarity">Polarity:</string>
    <string name="tia_gain">TIA gain:</string>
    <string name="load_resistor">Load resistor:</string>
    <string name="internal_zero">Internal zero:</string>
    <string name="loading">Loading...</string>
    <string name="open_data">Open data</string>
    <string name="choose_calibration">Choose Calibration</string>
    <string name="calibration">Calibration</string>
    <string name="larger_samples_might_take_long_to_open">Larger samples might take long to open, do not click on the file more than once.</string>
    <string name="calibration_info_text">Enter calibration values, Current (nA) and Lactate (mM).</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibration_result">Calibration result</string>
    <string name="save_calibration">Save calibration</string>
    <string name="make_a_new_calibration_or_use_an_old_one_before_starting_a_new_session">Make a new calibration or use an old one before starting a new session if you want to see real time lactate values.</string>
    <string name="new_calibration">New calibration</string>
    <string name="lactate_mm">Lactate (mM)</string>
    <string name="connected_to_lactatestat">Connected to: LactateStat</string>
    <string name="temperature">Temperature</string>
    <string name="potential">Potential</string>
</resources>