<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/lactatestat_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bl_status_icon"
        app:srcCompat="@drawable/lactatestat_splash_logo" />

    <Button
        android:id="@+id/connect_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/connect_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/secondaryTextColor"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="add"
        app:icon="@drawable/ic_baseline_bluetooth_60"
        app:iconTint="#2196F3"
        app:iconTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:onClick="startBleSearch"/>

    <Button
        android:id="@+id/history_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="viewHistory"
        android:text="@string/history_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/secondaryTextColor"
        app:backgroundTint="#FFFFFF"
        app:icon="@drawable/ic_baseline_show_chart_60"
        app:iconTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_session_button" />

    <TextView
        android:id="@+id/connection_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/status_not_connected"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#9F1414"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/new_session_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="startNewSession"
        android:text="@string/new_session"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/secondaryTextColor"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="add"
        app:icon="@drawable/ic_baseline_directions_run_60"
        app:iconTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_button" />

    <ImageView
        android:id="@+id/bl_status_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/connection_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_baseline_bluetooth_disabled_35"
        android:contentDescription="@string/ble_connection_status_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>